test_suite/tests/ui/nightly/fail/misplace_attribute/nightly_subcommand_in_mod.rs
use clapi::macros::*;

#[command]
fn app(){}

pub mod module {
    use clapi::macros::*;

    #[subcommand]
    pub fn child(){}
}

fn main(){}