test_suite/tests/ui/nightly/fail/misplace_attribute/nightly_subcommand_in_mod.stderr
error: custom attribute panicked
 --> $DIR/nightly_subcommand_in_mod.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: `child` is not a top free function
